--- a/base/框架和类库/Typescript/基础语法.md
+++ b/base/框架和类库/Typescript/基础语法.md
@@ -39,5 +39,87 @@ let num: number = 123; //支持二进制/八进制/十进制/十六进制
 字符串
 
 ```ts
-let name: string = "Nick";
+let name: string = 'Nick';
+//可使用模版字符串
+let firstName: string = '漩涡';
+let name: string = `${firstName}鸣人`;
+```
+
+数组
+
+```ts
+let list: nember[] = [1, 2, 3];
+let list: Array<number> = [1, 2, 3];
+```
+
+元组
+
+```ts
+//表示一个已知元素数量和类型的数组
+let list: [number, string] = [1, '2'];
+```
+
+枚举
+
+```ts
+//默认值为下标
+enum Color {
+    Red,
+    Green,
+    Blue
+}
+let color: Color = Color.Green;
+let colorName: string = Color[2]; //Bluy=>根据值可以获取 key
+```
+
+Any
+
+```ts
+//任意值
+let notSure: any = 4;
+notSure = true;
+let list: any[] = [1, true, 'free'];
+```
+
+void
+
+```ts
+//没有任何类型,变量只能赋值 null/undefined,一般用于无返回值的函数
+function warnUser(): void {
+    console.log('hahahah');
+}
+```
+
+null 和 undefined
+
+```ts
+//null 和 undefined 是所有类型的子集
+let num: number = null;
+```
+
+Never
+
+```ts
+//永不存在值得类型
+// 返回never的函数总是抛出异常
+function error(message: string): never {
+    throw new Error(message);
+}
+// 返回never的函数必须存在无法达到的终点
+function infiniteLoop(): never {
+    while (true) {}
+}
+```
+
+object
+
+```ts
+//非原始类型,除 number,string,boolean,symbol,null,undefined 之外的类型
+declare function create(o: object | null): void;
+create({prop: 0}); // OK
+create(null); // OK
+create(42); // Error
+create('string'); // Error
+create(false); // Error
+create(undefined); // Error
 ```
