--- a/base/框架和类库/Typescript/基础语法.md
+++ b/base/框架和类库/Typescript/基础语法.md
@@ -123,3 +123,13 @@ create('string'); // Error
 create(false); // Error
 create(undefined); // Error
 ```
+
+类型断言
+
+```ts
+//类型强制转换
+let someValue: any = 'this is a string';
+
+let strLength: number = (<string>someValue).length; //写法一
+let strLength: number = (someValue as string).length; //写法二
+```
