--- a/base/前端工程/nginx/腾讯云搭建.md
+++ b/base/前端工程/nginx/腾讯云搭建.md
@@ -1,1 +1,55 @@
-demo
+## 安装 Nginx
+
+```
+yum install nginx -y
+```
+
+## 配置静态资源
+
+```
+vi  /etc/nginx/nginx.conf
+```
+
+配置多级目录
+
+```js
+//添加单独server配置
+vi/etc/nginx/conf.d/xxx.conf
+server {
+        listen 8001;
+        location / {
+            # vue h5 history mode 时配置
+            try_files $uri $uri/ /index.html;
+
+            root /home/html/travel_admin/dist;
+            index index.html index.htm;
+        }
+
+    }
+//配置反向代理
+vi /etc/nginx/nginx.conf
+ server {
+        listen 80;
+        server_name web.zjj7.com;
+        location / {
+            # 这里是根目录的项目
+            try_files $uri $uri/ /index.html;
+            root /home/html/travel/dist;
+            index index.html index.htm;
+        }
+　　　　　# 这里是需要部署的二级目录应用配置
+        location ^~/admin/ {
+          proxy_redirect off;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_pass http://127.0.0.1:8001/;
+        }
+    }
+```
+
+## 重启 nginx
+
+```
+nginx -s reload
+```
